Enhanced UI with Streamlit deployment - added modern visualizations, improved styling, and Streamlit Cloud config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-plotly
-pandas
-numpy
-openai
-requests
+streamlit>=1.28.0
+plotly>=5.14.0
+pandas>=2.0.0
+numpy>=1.24.0
+python-dateutil>=2.8.2
+openai>=1.0.0
+requests>=2.31.0
